--- a/server/onlinework/src/main/resources/application.yml
+++ b/server/onlinework/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test
+    url: jdbc:mysql://localhost:3306/onlinework
     username: root
     password: 123456
   jpa:
